# learn-glsl

./: .gitignore
nlohmann/: build.sh  index.html  serve.json  serve.sh
nlohmann/src/: CMakeLists.txt  main.cc  static-class.h  static-method.h  static-wasted.h
nlohmann/src/nlohmann/: json.hpp
opengl/: build.sh  camera.cc  camera.h  events.cc  serve.sh
opengl/src/: events.h  main.cc
sdl2/: build.sh  main.cc  serve.sh
